# Crossword

./: .gitignore  CMakeLists.txt  README.md  main.c  misc.c  misc.h  utils.c  utils.h
boards/: board_creator.c  board_creator.h  boards_db.c  boards_db.h
menus/: editmenu.c  editmenu.h  mainmenu.c  mainmenu.h
menus/editmenu/: actions.c  actions.h  selector.c  selector.h
